<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idSearch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consLayuot"
        android:layout_width="76dp"
        android:layout_height="match_parent"
        android:background="@drawable/layout_background"
        android:shadowColor="#000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="50"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/idchange"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/montserrat_subrayada_bold"
            android:gravity="center"
            android:rotation="270"
            android:shadowColor="#000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="50"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/idAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/nonephotoItem"
            android:layout_width="62dp"
            android:layout_height="49dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/nameSales"
            android:shadowColor="#000"
            android:shadowDx="2"
            android:shadowDy="5"
            android:shadowRadius="50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_logo_svgrepo_com"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/idAdd"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/montserrat_subrayada_bold"
            android:gravity="center"
            android:onClick="onClickADD"
            android:rotation="270"
            android:shadowColor="#000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="50"
            android:text="@string/addNamePage"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/idMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/idMain"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:layout_marginBottom="30dp"

            android:fontFamily="@font/montserrat_subrayada_bold"
            android:gravity="center"
            android:onClick="onclickMain"
            android:rotation="270"

            android:shadowColor="#000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="50"
            android:text="@string/nameMain"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/nonephotoItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="107dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/nameMarket"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@+id/consLayuot"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:endColor="#22888F"
        android:fontFamily="@font/alfa_slab_one"
        android:startColor="#5b86e5"
        android:text="@string/namePlace"
        android:textColor="#5b86e5"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/montserrat_subrayada_bold"
        android:text="@string/we"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/imageTG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/consLayuot" />

    <ImageView
        android:id="@+id/imageVK"
        android:layout_width="58dp"
        android:layout_height="62dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="3dp"
        android:onClick="onClickVK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageTG"
        app:layout_constraintStart_toEndOf="@+id/consLayuot"
        app:srcCompat="@drawable/vk" />

    <ImageView
        android:id="@+id/imageTG"
        android:layout_width="68dp"
        android:layout_height="65dp"
        android:layout_marginStart="24dp"
        android:onClick="onClicktTG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageVK"
        app:srcCompat="@drawable/telegramm" />

    <ImageView
        android:id="@+id/imageINST"
        android:layout_width="49dp"
        android:layout_height="57dp"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:onClick="onClickInsta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageTG"
        app:srcCompat="@drawable/insta" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="336dp"
        android:layout_height="552dp"
        android:fontFamily="@font/alfa_slab_one"
        android:gravity="center"
        android:text="@string/tvinfo"
        android:textSize="20sp"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toTopOf="@+id/tvWe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toEndOf="@+id/consLayuot"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>