<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consLayuot"
        android:layout_width="76dp"
        android:layout_height="match_parent"
        android:background="@drawable/layout_background"
        android:shadowColor="#000"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="50"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/photoName"
            android:layout_width="62dp"
            android:layout_height="49dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/tvSales"
            android:shadowColor="#000"
            android:shadowDx="2"
            android:shadowDy="5"
            android:shadowRadius="50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_logo_svgrepo_com" />

        <TextView
            android:id="@+id/idchange"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/montserrat_subrayada_bold"
            android:gravity="center"
            android:onClick="onClickAbout"
            android:rotation="270"
            android:shadowColor="#000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="50"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/idAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/idAdd"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/montserrat_subrayada_bold"
            android:gravity="center"
            android:onClick="onClick3"
            android:rotation="270"
            android:shadowColor="#000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="50"
            android:text="@string/tvADD"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/idMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/idMain"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/montserrat_subrayada_bold"
            android:gravity="center"
            android:onClick="onClick2"
            android:rotation="270"
            android:shadowColor="#000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="50"
            android:text="@string/tvMain"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/photoName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/nonephotoItem"
        android:layout_width="314dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/todoName"
        android:onClick="nonePicture"
        android:src="@drawable/nullphoto"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/consLayuot"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <EditText

        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:autofillHints=""
        android:digits="ЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЯЧСМИТЬБЮйцукенгшщзхъфывапролджэячсмитьбю1234567890 "
        android:inputType="textCapWords"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/consLayuot"
        app:layout_constraintTop_toBottomOf="@+id/nonephotoItem"
        tools:ignore="SpeakableTextPresentCheck">


    </EditText>

    <EditText

        android:id="@+id/etPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/consLayuot"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        tools:ignore="SpeakableTextPresentCheck">


    </EditText>

    <EditText

        android:id="@+id/etWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:autofillHints=""
        android:digits="1234567890,кглмл"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/etManufactursName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/consLayuot"
        app:layout_constraintTop_toBottomOf="@+id/etPrice"
        tools:ignore="SpeakableTextPresentCheck">


    </EditText>

    <EditText

        android:id="@+id/etManufactursName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:digits="ЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЯЧСМИТЬБЮйцукенгшщзхъфывапролджэячсмитьбю "

        android:inputType="textCapWords"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/tvcountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/consLayuot"
        app:layout_constraintTop_toBottomOf="@+id/etWeight"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="">


    </EditText>

    <EditText

        android:id="@+id/tvcountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:autofillHints=""

        android:digits="ЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЯЧСМИТЬБЮйцукенгшщзхъфывапролджэячсмитьбю "
        android:inputType="textCapWords"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/tbButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/consLayuot"
        app:layout_constraintTop_toBottomOf="@+id/etManufactursName"
        tools:ignore="SpeakableTextPresentCheck">


    </EditText>

    <TableRow
        android:id="@+id/tbOneBTN"
        android:layout_width="333dp"
        android:layout_height="52dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/consLayuot"
        app:layout_constraintTop_toBottomOf="@+id/tbButton">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonChange"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_backgroun"
            android:onClick="buttonDeletePhoto"
            android:text="@string/btnDeletePhoto"
            android:textColor="@color/white" />
    </TableRow>


    <TableRow
        android:id="@+id/tbButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/tbOneBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/consLayuot"
        app:layout_constraintTop_toBottomOf="@+id/tvcountry">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/btn_backgroun"
            android:shadowColor="@color/black"
            android:text="@string/btnDeleteRow"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChange"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:background="@drawable/btn_backgroun"
            android:text="@string/btnChange"
            android:textColor="@color/white" />

    </TableRow>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_weight="1"
        android:text="@string/tvNameProduct"

        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/consLayuot"
        app:layout_constraintTop_toBottomOf="@+id/nonephotoItem"
        app:layout_constraintVertical_bias="0.774" />

    <TextView
        android:id="@+id/tvPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"

        android:layout_weight="1"
        android:text="@string/tvPriceObject"
        app:layout_constraintBottom_toTopOf="@+id/etPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/consLayuot"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"
        android:layout_weight="1"
        android:text="@string/tvWeight"
        app:layout_constraintBottom_toTopOf="@+id/etWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/consLayuot"
        app:layout_constraintTop_toBottomOf="@+id/etPrice" />


    <TextView
        android:id="@+id/tvBrand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"
        android:layout_weight="1"
        android:text="@string/tvName"
        app:layout_constraintBottom_toTopOf="@+id/etManufactursName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/consLayuot"
        app:layout_constraintTop_toBottomOf="@+id/etWeight" />

    <TextView
        android:id="@+id/tvstrana"
        android:layout_width="324dp"
        android:layout_height="24dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:text="@string/nameCountryManufacturer"
        app:layout_constraintBottom_toTopOf="@+id/tvcountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/consLayuot"
        app:layout_constraintTop_toBottomOf="@+id/etManufactursName"
        app:layout_constraintVertical_bias="0.833"
        tools:ignore="TouchTargetSizeCheck" />

    <ProgressBar
        android:id="@+id/loadingPB"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginEnd="144dp"
        app:layout_constraintBottom_toTopOf="@+id/tbOneBTN"
        app:layout_constraintEnd_toEndOf="@+id/tbOneBTN"
        app:layout_constraintTop_toBottomOf="@+id/tbButton" />


</androidx.constraintlayout.widget.ConstraintLayout>